--- a/javascript/javascript3/week1/Weather app/style.css
+++ b/javascript/javascript3/week1/Weather app/style.css
@@ -1,3 +1,13 @@
+body {
+    box-sizing: border-box;
+}
+#wrapper {
+    width: 500px;
+    padding: 20px;
+    margin: 0 auto;
+    border: 1px solid crimson;
+    border-radius: 10px;
+}
 #city-value {
     padding: 5px 10px;
     border: solid 1px crimson;
@@ -13,4 +23,19 @@
 }
 #btn:hover {
     background-color: #fc4267;
+}
+#weather {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+li {
+    list-style: none;
+}
+#city-name {
+    /*display: block;*/
+    margin: 10px 0;
+    font-size: 42px;
+    text-transform: capitalize;
 }
