--- a/javascript/javascript3/week1/Weather app/style.css
+++ b/javascript/javascript3/week1/Weather app/style.css
@@ -1,23 +1,35 @@
 body {
+    background-color: rgba(128, 128, 128, 0.3);
     box-sizing: border-box;
 }
+#info {
+
+}
 #wrapper {
+    display: flex;
+    justify-content: space-between;
     width: 500px;
     padding: 20px;
     margin: 0 auto;
     border: 1px solid crimson;
-    border-radius: 10px;
+    border-radius: 20px;
+    background-color: white;
+    min-height: 300px;
+    box-shadow: 1px 3px 10px rgb(128, 128, 128);
 }
 #city-value {
-    padding: 5px 10px;
+    width: 230px;
+    padding: 7px 15px;
     border: solid 1px crimson;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 #btn {
+    margin-left: 5px;
+    cursor: pointer;
     background-color: crimson;
-    padding: 6px 11px;
+    padding: 8px 15px;
     border: none;
-    border-radius: 7px;
+    border-radius: 10px;
     color: white;
     transition: background-color ease 0.3s;
 }
@@ -27,15 +39,27 @@ body {
 #weather {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 12px;
     flex-wrap: wrap;
+    padding: 0 20px;
 }
 li {
     list-style: none;
 }
 #city-name {
-    /*display: block;*/
     margin: 10px 0;
     font-size: 42px;
     text-transform: capitalize;
+}
+#current-position {
+    cursor: pointer;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    transition: background-color ease 0.3s;
+    background-color: rgba(128, 128, 128, 0.5);
+}
+#current-position:hover {
+    background-color: #fc4267;
 }
