--- a/React2/week1/my-app/src/app/globals.css
+++ b/React2/week1/my-app/src/app/globals.css
@@ -1,11 +1,11 @@
 :root {
-  --background: #ffffff;
+  --background: #afafaf;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #afafaf;
     --foreground: #ededed;
   }
 }
@@ -37,6 +37,6 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
 }
