--- a/React2/week1/my-app/src/app/globals.css
+++ b/React2/week1/my-app/src/app/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --background: #afafaf;
   --foreground: #171717;
@@ -38,43 +42,6 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: light;
-  }
-}
-.form {
-  max-width: 500px;
-  margin: 0 auto;
-  background: white;
-  border-radius: 15px;
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 24px;
-  color: black;
-}
-.form-group {
-  margin-bottom: 16px;
-  display: flex;
-  flex-direction: column;
-}
-.labelForm {
-  margin-bottom: 10px;
-}
-.inputForm {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-.formButton {
-  background: #6495EC;
-  color: white;
-  padding: 8px 20px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background 0.3s;
-
-  &:hover {
-    background: #51afef;
   }
 }
 
